k8s/postgrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: postgrest
  labels:
    app: postgrest
spec:
  type: ClusterIP
  selector:
    app: postgrest
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
